# git-status-tree-rs

./: Cargo.toml  README.md
src/: main.rs
